<resources>
    <!-- Nom de l'application -->
    <string name="app_name">ProjetAndroid</string>

    <!-- Textes communs pour les boutons -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Annuler</string>
    <string name="button_submit">Valider</string>
    <string name="button_login">Se connecter</string>
    <string name="button_register">S\'inscrire</string>
    <string name="button_retry">Réessayer</string>
    <string name="button_save">Enregistrer</string>
    <string name="button_delete">Supprimer</string>
    <string name="button_edit">Modifier</string>

    <!-- Messages communs -->
    <string name="message_loading">Chargement en cours...</string>
    <string name="message_error">Une erreur s\'est produite</string>
    <string name="message_success">Succès !</string>
    <string name="message_no_internet">Pas de connexion Internet</string>
    <string name="message_try_again">Veuillez réessayer</string>

    <!-- Textes pour les champs de formulaire -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_confirm_password">Confirmer le mot de passe</string>
    <string name="hint_name">Nom</string>
    <string name="hint_phone">Téléphone</string>

    <!-- Titres communs -->
    <string name="title_login">Connexion</string>
    <string name="title_register">Inscription</string>
    <string name="title_profile">Profil</string>
    <string name="title_settings">Paramètres</string>
    <string name="title_home">Accueil</string>

    <!-- Autres textes utiles -->
    <string name="text_or">OU</string>
    <string name="text_remember_me">Se souvenir de moi</string>
    <string name="text_forgot_password">Mot de passe oublié ?</string>
    <string name="text_terms_and_conditions">Conditions d\'utilisation</string>
    <string name="text_privacy_policy">Politique de confidentialité</string>
    <string name="create_account_prompt">Pas encore de compte ? Créer un compte</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="catchPhrase">Une seule liste,\nmille façons de ne rien oublier.</string>
    <string name="commencer">Commencer</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="signup">SignUp</string>
    <string name="singin">SingIn</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="logout">LogOut</string>
    <string name="back">Back</string>
    <string name="add_group">Add a group</string>
    <string name="group_name">Group Name</string>
    <string name="nom_du_groupe">Nom du groupe</string>
    <string name="username_du_membre">Username du membre</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="remove_member">Remove Member</string>
    <string name="add_list">add list</string>
    <string name="nom_de_la_liste">Nom de la liste</string>
    <string name="add_item">add item</string>
    <string name="article">Article</string>
    <string name="listes">Listes</string>
    <string name="scan">Scan</string>
    <string name="groupes">Groupes</string>
    <string name="home">Home</string>
    <string name="remove_item">Remove_Item</string>
    <string name="exemple_d_item">Exemple d’item</string>
</resources>