<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText">

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_listes"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/listes" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/scan" />

    <item
        android:id="@+id/navigation_groupes"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/groupes" />

</menu>
